log
Wed, Mar 26, 2025  8:38:26 AM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:39:41 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
873170f
Wed, Mar 26, 2025  8:43:47 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
458e1ee
Wed, Mar 26, 2025  8:46:04 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:25: error: 'List {aka struct List}' has no member named 'next'
     list->current = list->next;
                         ^~
Compilation failed
957426b
